<resources>
    <string name="app_name">Motion Detection Pablo Castrillon</string>

    <string name="show_notifications">Show Notifications</string>
    <string name="show_barplot">Show BarPlot</string>
    <string name="show_linechart">Show Linechart</string>

    <!--<string name="delete">Delete</string>-->
    <string name="service_started">Service Started</string>
    <string name="the_action_is_not_possible">The action is not possible</string>
    <string name="it_is_not_possible_to_obtain_the_plot">It is not possible to obtain the plot</string>


    <string name="notification_id">Id</string>
    <string name="Date">Date</string>
    <string name="Duration">Duration</string>


    <string name="interactions_per_hour">Interactions per hour</string>

    <array name="array_rage_hours">
        <item>00:00 - 01:00</item>
        <item>01:00 - 02:00</item>
        <item>02:00 - 03:00</item>
        <item>03:00 - 04:00</item>
        <item>04:00 - 05:00</item>
        <item>05:00 - 06:00</item>
        <item>06:00 - 07:00</item>
        <item>07:00 - 08:00</item>
        <item>08:00 - 09:00</item>
        <item>09:00 - 10:00</item>
        <item>10:00 - 11:00</item>
        <item>11:00 - 12:00</item>
        <item>12:00 - 13:00</item>
        <item>13:00 - 14:00</item>
        <item>14:00 - 15:00</item>
        <item>15:00 - 16:00</item>
        <item>16:00 - 17:00</item>
        <item>17:00 - 18:00</item>
        <item>18:00 - 19:00</item>
        <item>19:00 - 20:00</item>
        <item>20:00 - 21:00</item>
        <item>21:00 - 22:00</item>
        <item>22:00 - 23:00</item>
        <item>23:00 - 00:00</item>
    </array>
    <string name="delete">Delete</string>
</resources>
