<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="180dp"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        android:paddingTop="180dp"
        android:weightSum="1">

        <Button
            android:id="@+id/bt_show_notification"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:gravity="center"
            android:text="@string/show_notifications">

        </Button>

        <Button
            android:id="@+id/bt_show_barplot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:gravity="center"
            android:text="@string/show_barplot">

        </Button>

        <Button
            android:id="@+id/bt_show_linechart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:gravity="center"
            android:text="@string/show_linechart" />


    </LinearLayout>

</RelativeLayout>