<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_notification_list"
    android:layout_width="match_parent"
    android:layout_height="68dp"
    android:padding="5dp"
    card_view:cardCornerRadius="6dp"
    card_view:cardElevation="1dp"
    card_view:cardUseCompatPadding="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="fill_vertical|center"
                            android:layout_weight="0.40"
                            android:gravity="center_vertical"
                            android:text="@string/notification_id"
                            android:textAlignment="center"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="0.25"
                            android:gravity="center_vertical"
                            android:text="@string/Date"
                            android:textAlignment="center"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="0.35"
                            android:gravity="center_vertical"
                            android:text="@string/Duration"
                            android:textAlignment="center"
                            android:textSize="15sp"
                            android:textStyle="bold" />


                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:id="@+id/tv_notification_id"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="fill_vertical|center"
                            android:layout_weight="0.40"
                            android:gravity="center_vertical"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/tv_date"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="0.25"
                            android:gravity="center_vertical"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/tv_duration"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="0.35"
                            android:gravity="center_vertical"
                            android:textAlignment="center" />


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7">

            <ImageButton
                android:id="@+id/bt_delete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/rounted_button_red"
                android:padding="3dp"
                android:src="@drawable/baseline_delete_outline_white_24"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>